kubernetes/base/media-server-csi-s3/bases/emby/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  labels:
    project: media-server
    component: emby
spec:
  selector:
    project: media-server
    component: emby
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
